--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/doubleodenis/potential-memory#readme",
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "cheerio": "^1.0.0-rc.3"
   }
 }
